lexers/speakQueryParser.py
# Generated from speakQuery.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class speakQueryParser ( Parser ):

    grammarFileName = "speakQuery.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'|'", "'earliest'", "'latest'", "'index'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'if'", "'else'", "'case'", "'='", "'!='", 
                     "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", 
                     "'/'", "'++'", "'--'", "'~'", "'('", "')'", "'['", 
                     "']'", "','", "';'", "'table'", "'consecutive'", "'repeat'", 
                     "<INVALID>", "'mvexpand'", "'reverse'", "'mvreverse'", 
                     "'mvcombine'", "'mvfind'", "'dedup'", "'mvdedup'", 
                     "'mvfilter'", "'count'", "'mvcount'", "'dc'", "'mvdc'", 
                     "'mvzip'", "'first'", "'last'", "<INVALID>", "<INVALID>", 
                     "'sort'", "'null'", "'eval'", "<INVALID>", "'bin'", 
                     "'stats'", "'eventstats'", "<INVALID>", "'values'", 
                     "<INVALID>", "'rename'", "<INVALID>", "'fields'", "'fieldsummary'", 
                     "'append'", "'appendpipe'", "'mvappend'", "'search'", 
                     "'multisearch'", "'head'", "<INVALID>", "'rex'", "'regex'", 
                     "'loadjob'", "<INVALID>", "'lookup'", "'inputlookup'", 
                     "'outputlookup'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'fillnull'", "'fang'", "'defang'", 
                     "'to_cron'", "'from_cron'", "'round'", "'min'", "'max'", 
                     "'median'", "'mode'", "'avg'", "'sum'", "'random'", 
                     "'sqrt'", "'range'", "'coalesce'", "'isnull'", "'isnotnull'", 
                     "'len'", "'sed'", "'concat'", "'replace'", "'lower'", 
                     "'upper'", "'capitalize'", "'trim'", "'ltrim'", "'rtrim'", 
                     "'match'", "'mvindex'", "'join'", "'mvjoin'", "'substr'", 
                     "'tostring'", "'type'", "'left'", "'right'", "'center'", 
                     "'abs'", "'urlencode'", "'urldecode'", "'decode'", 
                     "'encode'", "'base64'", "'spath'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'`'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'.'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "WS", "NEWLINE", "PIPE", "EARLIEST", 
                      "LATEST", "INDEX", "NOT", "AND", "OR", "BY", "AS", 
                      "IN", "IF", "ELSE", "CASE", "EQUALS", "NOT_EQUALS", 
                      "GT", "LT", "GTEQ", "LTEQ", "PLUS", "MINUS", "MUL", 
                      "DIV", "INC", "DEC", "BITWISE_NOT", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "COMMA", "SEMICOLON", "TABLE", 
                      "CONSECUTIVE", "REPEAT", "MAX_MATCH", "MVEXPAND", 
                      "REVERSE", "MVREVERSE", "MVCOMBINE", "MVFIND", "DEDUP", 
                      "MVDEDUP", "MVFILTER", "COUNT", "MVCOUNT", "DC", "MVDC", 
                      "MVZIP", "FIRST", "LAST", "DELIM", "FILE", "SORT", 
                      "NULL", "EVAL", "SPAN", "BIN", "STATS", "EVENTSTATS", 
                      "VALUE", "VALUES", "WHERE", "RENAME", "FIELD", "FIELDS", 
                      "FIELDSUMMARY", "APPEND", "APPENDPIPE", "MVAPPEND", 
                      "SEARCH", "MULTISEARCH", "HEAD", "LIMIT", "REX", "REGEX", 
                      "LOADJOB", "OUTPUT", "LOOKUP", "INPUTLOOKUP", "OUTPUTLOOKUP", 
                      "OUTPUTNEW", "WINDOW", "OVERWRITE", "OVERWRITE_IF_EMPTY", 
                      "CREATE_EMPTY", "FILLNULL", "FANG", "DEFANG", "TO_CRON", 
                      "FROM_CRON", "ROUND", "MIN", "MAX", "MEDIAN", "MODE", 
                      "AVG", "SUM", "RANDOM", "SQRT", "RANGE", "COALESCE", 
                      "ISNULL", "ISNOTNULL", "LEN", "SED", "CONCAT", "REPLACE", 
                      "LOWER", "UPPER", "CAPITALIZE", "TRIM", "LTRIM", "RTRIM", 
                      "MATCH", "MVINDEX", "JOIN", "MVJOIN", "SUBSTR", "TOSTRING", 
                      "TYPE", "LEFT", "RIGHT", "CENTER", "ABS", "URLENCODE", 
                      "URLDECODE", "DECODE", "ENCODE", "BASE64", "SPATH", 
                      "BOOLEAN", "SECONDS", "MINUTES", "HOURS", "DAYS", 
                      "WEEKS", "YEARS", "BACKTICK", "NUMBER", "SINGLE_QUOTED_STRING", 
                      "DOUBLE_QUOTED_STRING", "PERIOD", "VARIABLE" ]

    RULE_speakQuery = 0
    RULE_initialSequence = 1
    RULE_expression = 2
    RULE_conjunction = 3
    RULE_comparison = 4
    RULE_additiveExpr = 5
    RULE_multiplicativeExpr = 6
    RULE_unaryExpr = 7
    RULE_primary = 8
    RULE_timeClause = 9
    RULE_earliestClause = 10
    RULE_latestClause = 11
    RULE_indexClause = 12
    RULE_comparisonOperator = 13
    RULE_inExpression = 14
    RULE_inputlookupInit = 15
    RULE_loadjobInit = 16
    RULE_validLine = 17
    RULE_directive = 18
    RULE_macro = 19
    RULE_statsAgg = 20
    RULE_variableList = 21
    RULE_subsearch = 22
    RULE_functionCall = 23
    RULE_numericFunctionCall = 24
    RULE_stringFunctionCall = 25
    RULE_specificFunctionCall = 26
    RULE_statsFunctionCall = 27
    RULE_regexTarget = 28
    RULE_mvfindObject = 29
    RULE_mvindexIndex = 30
    RULE_mvDelim = 31
    RULE_inputCron = 32
    RULE_cronformat = 33
    RULE_timespan = 34
    RULE_variableName = 35

    ruleNames =  [ "speakQuery", "initialSequence", "expression", "conjunction", 
                   "comparison", "additiveExpr", "multiplicativeExpr", "unaryExpr", 
                   "primary", "timeClause", "earliestClause", "latestClause", 
                   "indexClause", "comparisonOperator", "inExpression", 
                   "inputlookupInit", "loadjobInit", "validLine", "directive", 
                   "macro", "statsAgg", "variableList", "subsearch", "functionCall", 
                   "numericFunctionCall", "stringFunctionCall", "specificFunctionCall", 
                   "statsFunctionCall", "regexTarget", "mvfindObject", "mvindexIndex", 
                   "mvDelim", "inputCron", "cronformat", "timespan", "variableName" ]

    EOF = Token.EOF
    COMMENT=1
    WS=2
    NEWLINE=3
    PIPE=4
    EARLIEST=5
    LATEST=6
    INDEX=7
    NOT=8
    AND=9
    OR=10
    BY=11
    AS=12
    IN=13
    IF=14
    ELSE=15
    CASE=16
    EQUALS=17
    NOT_EQUALS=18
    GT=19
    LT=20
    GTEQ=21
    LTEQ=22
    PLUS=23
    MINUS=24
    MUL=25
    DIV=26
    INC=27
    DEC=28
    BITWISE_NOT=29
    LPAREN=30
    RPAREN=31
    LBRACK=32
    RBRACK=33
    COMMA=34
    SEMICOLON=35
    TABLE=36
    CONSECUTIVE=37
    REPEAT=38
    MAX_MATCH=39
    MVEXPAND=40
    REVERSE=41
    MVREVERSE=42
    MVCOMBINE=43
    MVFIND=44
    DEDUP=45
    MVDEDUP=46
    MVFILTER=47
    COUNT=48
    MVCOUNT=49
    DC=50
    MVDC=51
    MVZIP=52
    FIRST=53
    LAST=54
    DELIM=55
    FILE=56
    SORT=57
    NULL=58
    EVAL=59
    SPAN=60
    BIN=61
    STATS=62
    EVENTSTATS=63
    VALUE=64
    VALUES=65
    WHERE=66
    RENAME=67
    FIELD=68
    FIELDS=69
    FIELDSUMMARY=70
    APPEND=71
    APPENDPIPE=72
    MVAPPEND=73
    SEARCH=74
    MULTISEARCH=75
    HEAD=76
    LIMIT=77
    REX=78
    REGEX=79
    LOADJOB=80
    OUTPUT=81
    LOOKUP=82
    INPUTLOOKUP=83
    OUTPUTLOOKUP=84
    OUTPUTNEW=85
    WINDOW=86
    OVERWRITE=87
    OVERWRITE_IF_EMPTY=88
    CREATE_EMPTY=89
    FILLNULL=90
    FANG=91
    DEFANG=92
    TO_CRON=93
    FROM_CRON=94
    ROUND=95
    MIN=96
    MAX=97
    MEDIAN=98
    MODE=99
    AVG=100
    SUM=101
    RANDOM=102
    SQRT=103
    RANGE=104
    COALESCE=105
    ISNULL=106
    ISNOTNULL=107
    LEN=108
    SED=109
    CONCAT=110
    REPLACE=111
    LOWER=112
    UPPER=113
    CAPITALIZE=114
    TRIM=115
    LTRIM=116
    RTRIM=117
    MATCH=118
    MVINDEX=119
    JOIN=120
    MVJOIN=121
    SUBSTR=122
    TOSTRING=123
    TYPE=124
    LEFT=125
    RIGHT=126
    CENTER=127
    ABS=128
    URLENCODE=129
    URLDECODE=130
    DECODE=131
    ENCODE=132
    BASE64=133
    SPATH=134
    BOOLEAN=135
    SECONDS=136
    MINUTES=137
    HOURS=138
    DAYS=139
    WEEKS=140
    YEARS=141
    BACKTICK=142
    NUMBER=143
    SINGLE_QUOTED_STRING=144
    DOUBLE_QUOTED_STRING=145
    PERIOD=146
    VARIABLE=147

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpeakQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initialSequence(self):
            return self.getTypedRuleContext(speakQueryParser.InitialSequenceContext,0)


        def EOF(self):
            return self.getToken(speakQueryParser.EOF, 0)

        def validLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(speakQueryParser.ValidLineContext)
            else:
                return self.getTypedRuleContext(speakQueryParser.ValidLineContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(speakQueryParser.NEWLINE)
            else:
                return self.getToken(speakQueryParser.NEWLINE, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(speakQueryParser.WS)
            else:
                return self.getToken(speakQueryParser.WS, i)

        def getRuleIndex(self):
            return speakQueryParser.RULE_speakQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpeakQuery" ):
                listener.enterSpeakQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpeakQuery" ):
                listener.exitSpeakQuery(self)




    def speakQuery(self):

        localctx = speakQueryParser.SpeakQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_speakQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 72
                    _la = self._input.LA(1)
                    if not(_la==2 or _la==3):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 78
            self.initialSequence()
            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 79
                    _la = self._input.LA(1)
                    if not(_la==2 or _la==3):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 85
                    self.validLine() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 91
                self.match(speakQueryParser.EOF)
                pass

            elif la_ == 2:
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 92
                    self.match(speakQueryParser.NEWLINE)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialSequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(speakQueryParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(speakQueryParser.ExpressionContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(speakQueryParser.NEWLINE)
            else:
                return self.getToken(speakQueryParser.NEWLINE, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(speakQueryParser.WS)
            else:
                return self.getToken(speakQueryParser.WS, i)

        def inputlookupInit(self):
            return self.getTypedRuleContext(speakQueryParser.InputlookupInitContext,0)


        def loadjobInit(self):
            return self.getTypedRuleContext(speakQueryParser.LoadjobInitContext,0)


        def getRuleIndex(self):
            return speakQueryParser.RULE_initialSequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitialSequence" ):
                listener.enterInitialSequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitialSequence" ):
                listener.exitInitialSequence(self)




    def initialSequence(self):

        localctx = speakQueryParser.InitialSequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_initialSequence)
        self._la = 0 # Token type
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.expression()
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 101
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                        while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                            if _alt==1:
                                self.state = 98
                                _la = self._input.LA(1)
                                if not(_la==2 or _la==3):
                                    self._errHandler.recoverInline(self)
                                else:
                                    self._errHandler.reportMatch(self)
                                    self.consume() 
                            self.state = 103
                            self._errHandler.sync(self)
                            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                        self.state = 104
                        self.expression() 
                    self.state = 109
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.inputlookupInit()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.loadjobInit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'
